# cann-samples

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  requirements.txt
Samples/0_Introduction/matmul/: CMakeLists.txt  README.md  main.asc  main.cpp  matmul.cpp  matmul_golden.h  matmul_utils.h
Samples/0_Introduction/vector_add_c_api/: CMakeLists.txt  README.md  main.asc
Samples/1_Features/hardware_features/simd_vf_constraints/: CMakeLists.txt  README.md
Samples/1_Features/hardware_features/simd_vf_constraints/src/: args.asc  args_count.asc  asc_vf_call.asc  common_utils.h  hwlimits_addr_expr.asc  hwlimits_aux_scalar.asc  hwlimits_data_access.asc  hwlimits_regs.asc  hwloop.asc  kernel_utils.h  membar.asc
Samples/1_Features/instruction_optimization/unit_flag/: CMakeLists.txt  README.md  main.asc
Samples/1_Features/memory_optimization/full_load/: CMakeLists.txt  README.md  main.asc  main.cpp
Samples/1_Features/memory_optimization/l1_bank_conflict/: CMakeLists.txt  README.md  main.asc  main.cpp
Samples/1_Features/memory_optimization/reg_data_movement/: CMakeLists.txt  Reg数据搬运场景选型指南.md
Samples/1_Features/memory_optimization/reg_data_movement/src/: scene10_unalign.asc  scene1_dist_norm.asc  scene2_unpack_b16.asc  scene3_pack_b32.asc  scene4_first_element.asc  scene5_brc_b32.asc  scene6_block_copy.asc  scene7_gather_arange.asc  scene7_gather_e2b.asc  scene8_dintlv_intlv.asc  scene9_mask_dist.asc
Samples/1_Features/memory_optimization/scale_cache/: CMakeLists.txt  README.md  main.asc
Samples/1_Features/memory_optimization/scale_cache/scripts/: gen_data.py  verify_result.py
Samples/2_Performance/full_quant_fused_infer_attention_score_story/: CMakeLists.txt  README.md
Samples/2_Performance/full_quant_fused_infer_attention_score_story/common/golden/: gen_data.py  verify_result.py
Samples/2_Performance/full_quant_fused_infer_attention_score_story/examples/: full_quant_fused_infer_attention_score_template.cpp
Samples/2_Performance/full_quant_fused_infer_attention_score_story/include/block/: attenmask.h  flash_attention_score_block_cube.h  flash_attention_score_block_vec_base.h  flash_attention_score_block_vec_infer.h  flash_attention_score_common_regbase.h  flash_attention_score_tiling_regbase.h  infer_flash_attention_comm.h  infer_flash_attention_kvcache.h  infer_flash_attention_sparse.h  pse.h
Samples/2_Performance/full_quant_fused_infer_attention_score_story/include/kernel/: fia_entry.h  flash_attention_score_kernel_base.h  flash_attention_score_kernel_infer.h
Samples/2_Performance/full_quant_fused_infer_attention_score_story/include/memcopy/: CopyInL1.h  FixpipeOut.h  buffer.h  buffers_policy.h  copy_gm_to_l1.h  copy_gm_to_ub.h  copy_ub_to_gm.h  fa_gm_tensor.h  fa_l1_tensor.h  gm_coord.h  gm_layout.h  matmul.h  offset_calculator.h  offset_calculator_v2.h  parser.h
Samples/2_Performance/full_quant_fused_infer_attention_score_story/include/utils/: common_utils.h  fia_enum.h  io_utils.h  util.h  util_regbase.h
Samples/2_Performance/full_quant_fused_infer_attention_score_story/include/vf/: vf_basic_block_utils.h  vf_div_cast.h  vf_flash_decode.h  vf_flashupdate_new.h  vf_mul_sel_softmaxflashv2_cast_nz_dn.h  vf_post_quant.h
Samples/2_Performance/full_quant_fused_infer_attention_score_story/src/: 0_naive.asc
Samples/2_Performance/grouped_matmul_story/grouped_matmul_recipes/: CMakeLists.txt  README.md
Samples/2_Performance/kv_rms_norm_rope_cache_story/: CMakeLists.txt  README.md
Samples/2_Performance/kv_rms_norm_rope_cache_story/include/: sample_common.h
Samples/2_Performance/kv_rms_norm_rope_cache_story/membase/: full_load.asc
Samples/2_Performance/kv_rms_norm_rope_cache_story/regbase/: full_load.asc
Samples/2_Performance/kv_rms_norm_rope_cache_story/scripts/: gen_data.py
Samples/2_Performance/matmul_story/: CMakeLists.txt  README.md
Samples/2_Performance/matmul_story/common/host_utils/: common_utils.h  io_utils.h
Samples/2_Performance/matmul_story/docs/: matmul_performance.md  quant_matmul_mx_performance.md  quant_matmul_mxfp4_performance.md  quant_matmul_mxfp4_tutorials.md  weight_quant_matmul_mxfp8fp4_performance.md
Samples/2_Performance/matmul_story/examples/: quant_matmul_template_aswt.cpp
Samples/2_Performance/matmul_story/include/block/: block_mmad_mx.h
Samples/2_Performance/matmul_story/include/kernel/: quant_matmul_mx_kernel_aswt_impl.h
Samples/2_Performance/matmul_story/matmul_recipes/: CMakeLists.txt  README.md
Samples/2_Performance/matmul_story/matmul_tutorials/: CMakeLists.txt  README.md
Samples/2_Performance/matmul_story/matmul_tutorials/0_naive/: CMakeLists.txt  matmul_tutorial_mxfp4_base.asc  matmul_tutorial_mxfp4_base.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/1_pingpong/: CMakeLists.txt  matmul_tutorial_mxfp4_openpingpong.cpp  matmul_tutorial_mxfp4_pingpong.asc  matmul_tutorial_mxfp4_pingpong.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/2_block_swat/: CMakeLists.txt  matmul_tutorial_mxfp4_swat.asc  matmul_tutorial_mxfp4_swat.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/3_last_round_tile_balance/: CMakeLists.txt  matmul_tutorial_mxfp4_swat_balance.asc  matmul_tutorial_mxfp4_swat_balance.cpp
Samples/2_Performance/moe_dispatch_and_combine_story/: CMakeLists.txt  README.md
Samples/2_Performance/moe_dispatch_and_combine_story/include/: moe_distribute_combine.h  moe_distribute_comm.h  moe_distribute_dispatch.h  moe_distribute_dispatch_non_quant.h  moe_distribute_dispatch_quant.h
Samples/2_Performance/moe_dispatch_and_combine_story/scripts/: gen_data.py
Samples/2_Performance/moe_dispatch_and_combine_story/src/: 0_non_quant_naive.cpp  dispatch_and_combine_final.cpp  utils.h
Samples/2_Performance/moe_dispatch_and_combine_story/utils/: gen_data.py  verify_result.py
Samples/2_Performance/simd_vf_story/: CMakeLists.txt  README.md
Samples/2_Performance/simd_vf_story/broadcast/: CMakeLists.txt  README.md
Samples/2_Performance/simd_vf_story/include/: host_test_utils.h  vf_common.h
(+439 files in other folders)
